# dev-tools

./: .gitignore  README.md
.github/: CODEOWNERS
.github/skills/shortcut-cr/: SETUP.md  SKILL.md
.github/skills/shortcut-cr/references/: cr-process.md  examples.md
sonarqube-cloud/: SETUP.md
sonarqube-cloud/cli/: README.md  pyproject.toml
sonarqube-cloud/cli/src/sonar_cli/: client.py  config.py  formatting.py  main.py
sonarqube-cloud/cli/src/sonar_cli/commands/: __init__.py  analysis.py  issues.py  measures.py  projects.py  quality_gate.py  rules.py
sonarqube-cloud/cli/tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_formatting.py
sonarqube-cloud/skill/: SKILL.md
sonarqube-cloud/skill/references/: cli-reference.md
